[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
sha2 = "0.10.9"
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
crossterm = "0.29.0"
axum = "0.8.4"
qrcode = "0.14.1"
local-ip-address = "0.6.5"
hyper = "1.6.0"
